scss/partials/_onboard_wrapper.scss
div.onboard-wrapper-container {

  div.oc-loading {
    width: 100vw;
    height: 100vh;
  }

  div.onboard-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    display: flex;

    @include mobile(){
      display: block;
    }

    div.onboard-wrapper-left {
      background-color: $carrot_dark_bg_gray;
      padding: 21px;
      flex: 1;
      // position: absolute;
      position: fixed;
      top: 0px;
      bottom: 0px;
      left: 0px;
      width: 50%;
      height: 100%;
      display: table;

      @include mobile(){
        display: none;
      }

      div.onboard-wrapper-logo {
        width: 82px;
        height: 20px;
        background-image: cdnUrl("/img/ML/carrot_logo_with_copy_gray.svg");
        background-size: 82px 20px;
        background-repeat: no-repeat;
        position: absolute;
        left: 21px;
        top: 21px;
      }

      div.onboard-wrapper-left-inner {
        // display: table-cell;
        // vertical-align: middle;
        // text-align: center;

        div.onboard-wrapper-box {
          margin-left: auto;
          margin-right: auto;
          width: 400px;
          margin-top: 180px;
          width: 294px;
          height: 301px;
          @include image-2x("/img/ML/carrot_box");
          background-size: 294px 301px;
          background-repeat: no-repeat;
        }
      }
    }

    div.onboard-wrapper-right {
      text-align: center;
      flex: 1;
      position: absolute;
      top: 0px;
      bottom: 0px;
      right: 0px;
      width: 50%;

      @include mobile(){
        flex: unset;
        width: 100%;
        position: unset;
      }
    }
  }
}

div.onboard-email-container {
  width: 339px;
  @include avenir_M;
  color: $carrot_gray;
  font-size: 32px;
  margin: 0 auto;
  position: relative;
  top: 50%;

  &.small {
    font-size: 24px;
  }

  &.dot-animation {
    text-align: left;
    width: 260px;
  }

  &.error {
    color: $carrot_orange;
  }

  &.email-wall {
    width: 385px;
    color: $deep_navy;
    @incldude avenir_H();

    div.email-wall-icon {
      background-image: cdnUrl("/img/ML/email_wall.svg");
      background-size: 48px 36px;
      background-position: center;
      width: 48px;
      height: 36px;
      margin: 0 auto 32px;
    }

    div.email-wall-subtitle {
      @include avenir_R();
      font-size: 18px;
      margin-top: 16px;
    }

    div.email-wall-sent-link {
      color: $deep_navy;
      @include avenir_R();
      font-size: 18px;
      margin-top: 56px;

      div.email-address {
        @include avenir_H();
        font-size: 18px;
        color: $deep_navy;
      }
    }
  }

  button.continue {
    margin-top: 16px;
    width: 170px;
    height: 42px;
    background-color: $sea_blue;
    color: white;
    @include avenir_H();
    font-size: 16px;
    border-radius: 4px;
    outline: none;
    border: none;

    @include mobile() {
      width: 100%;
    }

    &.disabled {
      background-color: $light_ui_grey;
    }
  }
}
/* ... */

