Fix onboard screens background color on mobile.

--- a/scss/partials/_onboard_wrapper.scss
+++ b/scss/partials/_onboard_wrapper.scss
@@ -15,6 +15,7 @@ div.onboard-wrapper-container {
 
     @include mobile(){
       display: block;
+      background-color: white;
     }
 
     div.onboard-wrapper-left {
